minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nodejs-service
            servicePort: 3000
        - path: /stats
          backend:
            serviceName: uwsgi-service
            servicePort: 8000
